# five-factor-e

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  RELEASES.md  linter  pyproject.toml  quiz.py  run-build  run-quiz  run-test  run-tests  setup.py  test.py  test2.py
big5/: __init__.py  facet.py  ipipneo.py  model.py  norm.py  utility.py
data/: README.md
data/IPIP-NEO/120/: answers.json  factors.json  questions-en-us.json  questions.json  result.json
data/IPIP-NEO/120/test/: answers-1.json  answers-2.json
data/IPIP-NEO/120/translation/: questions-es-es.json  questions-pt-br.json
data/IPIP-NEO/300/: answers.json  questions.json
ipipneo/: __init__.py  facet.py  ipipneo.py  model.py  norm.py  quiz.py  reverse.py  utility.py
test/: test_facet.py  test_ipipneo.py  test_model.py  test_norm.py  test_reverse.py  test_utility.py  test_x_300.py
test/mock/: answers-test-2.json  answers-test-3.json  answers-test-5.json  answers-test-7.json  answers-test-8.json
tests/: norm_test.py
tools/: quiz.py
